# ircp

./: .gitignore  4C _B1_R .js  4C _B2_R.js  4C_B1.js  4C_B2.js  CMakeLists.txt  NOTES.md  PROT.md  README.md  RFI.md  TODO.md  fast
SPI_EX1/: CMakeLists.txt
SPI_EX1/include/: smartrf_CC1200.h  smartrf_adr_CC1200.h
SPI_EX1/src/: SPIv1_test.c
_old/: rx_packet.c  rx_packet_freq_hop.c  rx_rssi.c  tx_packet.c  tx_packet_freq_hop.c  tx_rssi.c
archives/: cc1200d.tar
docs/: 4c.service  cc1200d.service  control_flow.drawio
include/: cc1200_function.h  cc1200_mode_rx_packet.h  cc1200_mode_rx_rssi.h  cc1200_mode_tx_packet.h  cc1200_mode_tx_rssi.h  cc1200_preinit.h  cc1200_reg.h  cc1200_state_read_rssi.h  cc1200_thread.h  config.h  prot.h
include/cc1200/: config.h  control.h  freq.h  regs.h  utils.h
include/ircp/: ircp.h  utils.h
include/ircp/stage/: chatting.h  connect.h  interrupted.h  reconnect.h
include/prog/: chat.h  prssi.h
include/util/: arrutils.h  assert.h  crypto.h  log.h  readline.h  ringbuffer.h  types.h
src/: cc1200_function.c  cc1200_main.c  cc1200_thread.c  main.c  prot.c  rx_packet.c  rx_packet_freq_hop.c  tx_packet.c  tx_packet_freq_hop.c  tx_rssi.c
src/cc1200/: control.c  freq.c  utils.c
src/ircp/: ircp.c  utils.c
src/ircp/stage/: chatting.c  connect.c  interrupted.c  reconnect.c
src/prog/: chat.c  prssi.c
src/util/: arrutils.c  assert.c  crypto.c  log.c  readline.c  ringbuffer.c
